<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="foodListBinding"
            type="com.example.androidcomponents.database.model.FoodListModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_12"
        app:cardElevation="@dimen/radius_12">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/size_8">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_fifteen" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_fifteen" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/margin_fifteen" />


            <ImageView
                android:id="@+id/food_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/food_offer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_24"
                android:background="@drawable/offer_drawable"
                android:elevation="@dimen/padding_10"
                android:padding="@dimen/size_6"
                android:text="@{foodListBinding.foodOffer}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/food_image"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/offer_string" />

            <TextView
                android:id="@+id/food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:fontFamily="@font/acme"
                android:text="@{foodListBinding.foodName}"
                android:textColor="@color/black"
                android:textSize="@dimen/size_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline_left_margin"
                app:layout_constraintTop_toBottomOf="@+id/food_image"
                tools:text="@string/foodName" />

            <TextView
                android:id="@+id/food_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:text="@{foodListBinding.foodDesc}"
                android:textColor="@color/lt_grey"
                android:textSize="@dimen/size12"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@+id/food_price"
                app:layout_constraintStart_toStartOf="@+id/guideline_left_margin"
                app:layout_constraintTop_toBottomOf="@+id/food_name"
                tools:text="Pizza, Fast Food, Beverages etc" />

            <TextView
                android:id="@+id/food_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:text="@{foodListBinding.foodPrice}"
                android:textColor="@color/lt_grey2"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right_margin"
                app:layout_constraintTop_toTopOf="@+id/barrier"
                tools:text="@string/priceOffer" />


            <TextView
                android:id="@+id/food_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:background="@drawable/rating_drawable"
                android:paddingHorizontal="@dimen/size_6"
                android:text="@{foodListBinding.foodRating}"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right_margin"
                app:layout_constraintTop_toBottomOf="@+id/food_image"
                tools:text="@string/rating" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="food_name,food_rating" />


            <View
                android:id="@+id/seperator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_6"
                android:layout_marginVertical="@dimen/size_6"
                android:background="@drawable/dotted_bg"
                android:layerType="hardware"
                app:layout_constraintTop_toBottomOf="@+id/food_desc" />

            <TextView
                android:id="@+id/food_extended_offer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@{foodListBinding.foodExtendedOffer}"
                android:textColor="@color/seperator2"
                android:textSize="@dimen/size_10"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right_margin"
                app:layout_constraintStart_toStartOf="@+id/guideline_left_margin"
                app:layout_constraintTop_toBottomOf="@+id/seperator"
                tools:text="@string/extendedOffer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>